fixes clipping of character sprite

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
   z-index: 500;
   transform: scaleX(-1);
   background-position: 200px;
+  width: 200px;
+  height: 200px;
 }
 
 .walking {
